# em27

./: .gitignore  CHANGELOG.md  ONBOARDING.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
docs/: co2_lineshape_experiment.md  investigation_log.md
em27gert/: __init__.py  instrument.py  proffast_bin.py  readers.py  retrieval.py  scene.py
notebooks/: em27_forward_vs_real.ipynb  em27_realdata.ipynb
scripts/: build_co2_absco.py  build_h2o_continuum.py  build_o2_cia.py  compare_fixedprior.py  derive_adcf.py  eof_lineshape.py  eof_residuals.py  plot_ils_experiment.py  plot_ils_shapes.py  plot_residual_airmass.py  plot_timeofday.py  plot_xgas_covary.py  plot_xgas_timeseries.py  run_co2_ensemble.py  run_co2_lineshape_test.py  run_ils_experiment.py  run_m0_m2.py  run_m4.py  run_m4_residuals.py  run_xgas_full.py
